css/orig.css
/***BODY***/
body {
	/* min-width: 890px; */
	padding-top: 50px;
	background-color: #eee; /* f5f5f5 */
	min-width: 690px;
}


/***HEADER***/
#navbar {
	z-index: 999;
	/* background-color: #592d94; */
	background-color: #fff;
	/* background-image: -webkit-linear-gradient(top,#eeeeee 0,#aaaaaa 100%); */
	
	/*positioning*/
	position: fixed;
	top: 0;
	left: 0;
	/* width: 100%; */
	right: 0;
	min-width: 1400px;
	
	background-color: #2d95b7;
	/* background-image: linear-gradient(#2d6994, #2d6994); */
	background-image: linear-gradient(#2d95b7, #23748e);
	
	-webkit-box-shadow: 0px 6px 7px 0px rgba(0,0,0,0.25);
	-moz-box-shadow: 0px 6px 7px 0px rgba(0,0,0,0.25);
	box-shadow: 0px 6px 7px 0px rgba(0,0,0,0.25);
	
}

#navsearch{
	width:250px;
	height: 27px;
	padding: 0px 6px;
}


#title{
	padding: 7px 15px;
	font-size: 20px;
	float: left;
	color: #f5f5f5;
}


/* 
#menu{
	position: absolute;
	left: 100px;
	top: 0;
	margin: 3px 0px;
}
 */


/***SIDEBAR***/
#sidebar{

	z-index: 800;
	position: fixed;
	
	padding: 0 0 50px 0;
	width: 210px;
	top: 44px;
	bottom: 0px;
	left: 0px;
	
	/* background: #f0f0f0; */
	
	overflow-y: auto;
	-webkit-transition: left .5s ease;
	
	-webkit-box-shadow: inset -6px 0px 7px 0px rgba(0,0,0,0.25);
	-moz-box-shadow: inset -6px 0px 7px 0px rgba(0,0,0,0.25);
	box-shadow: inset -6px 0px 7px 0px rgba(0,0,0,0.25);
	background-image: linear-gradient(#1F5D72, #34778E);
	
}

#sidebar h3 {
	font-size: 11px;
	color: #b3b3b3;
	text-transform: uppercase;
	font-weight: 600;
	line-height: 20px;
	margin: 8px 0 0 14px;
}

#sidebar ul{
	padding: 0;
}

#sidebar ul li {
	list-style-type: none;
}

#sidebar ul li a{
	padding: 3px 10px 7px 36px;
	line-height: 15px;
	text-indent: -9px;
	height: 31px;  /* 3+7+21(glyphicon size) */
	
	display: block;
	/* color: #666; */
	color: #f5f5f5;
	
	cursor: pointer;
}

#sidebar ul li a span{ /* glyphicons */
	padding-right: 4px;
	font-size: 18px;
}

#sidebar .glyphicon{
	/* color: forestgreen; */
	/* color: coral; */
	color: #f5f5f5;
}


/***MEAT***/

#meat{
	padding: 20px;
	position: absolute;
	overflow: auto;
	
	top: 44px;
	bottom: 0px;
	left: 210px;
	right: 0px;
	
	min-width: 600px;
	/* max-width: 690px;  */
	/* width: 100%; */ /* dont use */
	
	overflow-y: auto;
	overflow-x: hidden;
	
	/* -webkit-box-shadow: inset 0px 6px 7px 0px rgba(0,0,0,0.25);
	-moz-box-shadow: inset 0px 6px 7px 0px rgba(0,0,0,0.25);
	box-shadow: inset 0px 6px 7px 0px rgba(0,0,0,0.25); */
}

#meat>div{
	display: inline-block;
	width: 100%;
}
/* 
#listofPosts {
	height: 30px;
}
 */
.input-xlarge{
	/* min-width:612px; */
	width:100%;
	max-width:100%
}

.posts{
	padding: 0;
}

.submit-button{
	padding: 10px 10px 10px 0px;
}

.collapse-group{
	/* width: 100%; */
	/* min-width: 565px; */	/* depends on salvattore */
	background: #fff;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	border: 1px solid #e3e5e8;
	font-weight: 500;
	font-size: 13px;
	color: #5c6370;
	padding: 1em 20px;
	-webkit-box-shadow: 1px 0 0 0 #e3e5e8;
	-moz-box-shadow: 1px 0 0 0 #e3e5e8;
	box-shadow: 1px 0 0 0 #e3e5e8;
	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.1);
	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.1);
	box-shadow: 0 1px 2px rgba(0,0,0,.1);
	overflow: auto;
	margin: 5px 0 0;
}

.btn-respond {
	padding: 0 12px;
	float: right;
}

/* http://charliepark.org/bootstrap_buttons/ */
.btn-teal {
	background-color: hsl(195, 60%, 35%) !important;
	background-repeat: repeat-x;
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#2d95b7", endColorstr="#23748e");
	background-image: -khtml-gradient(linear, left top, left bottom, from(#2d95b7), to(#23748e));
	background-image: -moz-linear-gradient(top, #2d95b7, #23748e);
	background-image: -ms-linear-gradient(top, #2d95b7, #23748e);
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2d95b7), color-stop(100%, #23748e));
	background-image: -webkit-linear-gradient(top, #2d95b7, #23748e);
	background-image: -o-linear-gradient(top, #2d95b7, #23748e);
	background-image: linear-gradient(#2d95b7, #23748e);
	border-color: #23748e #23748e hsl(195, 60%, 32.5%);
	color: #fff !important;
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.16);
	-webkit-font-smoothing: antialiased;
}

.btn-purple {
	background-color: hsl(274, 80%, 34%) !important;
	background-repeat: repeat-x;
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#962be7", endColorstr="#5f119c");
	background-image: -khtml-gradient(linear, left top, left bottom, from(#962be7), to(#5f119c));
	background-image: -moz-linear-gradient(top, #962be7, #5f119c);
	background-image: -ms-linear-gradient(top, #962be7, #5f119c);
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #962be7), color-stop(100%, #5f119c));
	background-image: -webkit-linear-gradient(top, #962be7, #5f119c);
	background-image: -o-linear-gradient(top, #962be7, #5f119c);
	background-image: linear-gradient(#962be7, #5f119c);
	border-color: #5f119c #5f119c hsl(274, 80%, 29%);
	color: #fff !important;
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
	-webkit-font-smoothing: antialiased;
}

.subItems{
	padding-left:0;
}


/***FOOTER***/
footer {
	margin: 50px 0;
}







/*******************************************************/
/***index.ejs***/
#rphublogo{
	border:none;
	margin:0 auto 0 auto;
	/* min-width: 565px; */
}

#reqbtn{
	float:right;
}

